--- a/app/locale/en_US/AllBear_PciAuth.csv
+++ b/app/locale/en_US/AllBear_PciAuth.csv
@@ -2,3 +2,5 @@
 "Pci Auth","Pci Auth"
 "Settings","Settings"
 "Enabled","Enabled"
+"Passwords minimum length","Passwords minimum length"
+"Please enter %s or more characters. Leading or trailing spaces will be ignored.","Please enter %s or more characters. Leading or trailing spaces will be ignored."
