--- a/app/locale/ru_RU/AllBear_PciAuth.csv
+++ b/app/locale/ru_RU/AllBear_PciAuth.csv
@@ -2,3 +2,5 @@
 "Pci Auth","Pci Авторизация"
 "Settings","Настройки"
 "Enabled","Включено"
+"Passwords minimum length","Минимальная длина пароля"
+"Please enter %s or more characters. Leading or trailing spaces will be ignored.","Минимальная длина пароля %s символов."
