add Maximum invalid login attempts and Lockout effective period features

--- a/app/locale/en_US/AllBear_PciAuth.csv
+++ b/app/locale/en_US/AllBear_PciAuth.csv
@@ -4,3 +4,12 @@
 "Enabled","Enabled"
 "Passwords minimum length","Passwords minimum length"
 "Please enter %s or more characters. Leading or trailing spaces will be ignored.","Please enter %s or more characters. Leading or trailing spaces will be ignored."
+"The number of unsuccessful login tries to customer lock","The number of unsuccessful login tries to customer lock"
+"Lockout effective period","Lockout effective period"
+"in minutes","in minutes"
+"Time interval to reset the failed login tries counter","Time interval to reset the failed login tries counter"
+"Last unsuccessful login time","Last unsuccessful login time"
+"Unsuccessful login tries count","Unsuccessful login tries count"
+"Locked","Locked"
+"This account is locked because of too much unsuccessful login tries.","This account is locked because of too much unsuccessful login tries."
+"Lock time","Lock time"
