--- a/app/locale/ru_RU/AllBear_PciAuth.csv
+++ b/app/locale/ru_RU/AllBear_PciAuth.csv
@@ -4,3 +4,12 @@
 "Enabled","Включено"
 "Passwords minimum length","Минимальная длина пароля"
 "Please enter %s or more characters. Leading or trailing spaces will be ignored.","Минимальная длина пароля %s символов."
+"The number of unsuccessful login tries to customer lock","Количество неудачных попыток логина после которых происходит блокировка"
+"Lockout effective period","Длительность блокировки"
+"in minutes","в минутах"
+"Time interval to reset the failed login tries counter","Временной интервал между попытками входа при котором сбрасывается счетчик неудачных попыток"
+"Last unsuccessful login time","Время последней неудачной попытки входа"
+"Unsuccessful login tries count","Количество неудачных попыток входа"
+"Locked","Заблокирован"
+"This account is locked because of too much unsuccessful login tries.","Этот аккаунт заблокирован из за превышения неудачных попыток входа"
+"Lock time","Время блокировки"
