Add password history features

--- a/app/locale/en_US/AllBear_PciAuth.csv
+++ b/app/locale/en_US/AllBear_PciAuth.csv
@@ -15,3 +15,7 @@
 "Lock time","Lock time"
 "Accounts will be deactivated if not active for more than","Accounts will be deactivated if not active for more than"
 "Your session was expired","Your session was expired"
+"Password history","Password history"
+"Password was already used by you some times ago. Use new password.","Password was already used by you some times ago. Use new password."
+"Customer Id","Customer Id"
+"Password hash","Password hash"
